# karpathy-nano-gpt-lecture

./: .gitignore  .pre-commit-config.yaml  bigram.py  checkpoint.py  config.py  generate.py  main.py  model.py  nano-gpt-lec.ipynb  pyproject.toml  tokenization.ipynb  v2.py
data/malgudidays/: input.txt
